fix word-wrap

--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,10 @@ body {
 	background-color: #E6E6E6;
 }
 
+.item .comment--text {
+	word-wrap: break-word;
+}
+
 .item .comment--list li:nth-of-type(odd) .comment--photo {
 	background-color: #FF8A00;
 }
